--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -8,6 +8,10 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <meta name="theme-color" content="#000000" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
+        />
         <title>Contact List</title>
     </head>
     <body>
